个人资料页面

--- a/HealthySettle/HealthySettle/MyGroup/PersonalGroupn/PasswordCVController.xib
+++ b/HealthySettle/HealthySettle/MyGroup/PersonalGroupn/PasswordCVController.xib
@@ -110,7 +110,7 @@
                         <constraint firstItem="pNd-q7-Ayd" firstAttribute="top" secondItem="fem-kw-cFu" secondAttribute="top" constant="55" id="iAC-Rl-5gS"/>
                         <constraint firstItem="pJ1-1b-FuE" firstAttribute="leading" secondItem="fem-kw-cFu" secondAttribute="leading" id="jTh-6l-fAv"/>
                         <constraint firstAttribute="bottom" secondItem="cge-uG-r6I" secondAttribute="bottom" constant="50" id="nPi-P9-Jjo"/>
-                        <constraint firstAttribute="trailing" secondItem="htv-PJ-Xdg" secondAttribute="trailing" constant="20" id="uFO-D8-Rd6"/>
+                        <constraint firstAttribute="trailing" secondItem="htv-PJ-Xdg" secondAttribute="trailing" constant="30" id="uFO-D8-Rd6"/>
                         <constraint firstAttribute="height" constant="150" id="zjB-6Q-1R3"/>
                     </constraints>
                 </view>
@@ -130,13 +130,13 @@
             <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="fem-kw-cFu" secondAttribute="trailing" id="0CY-6Y-Jq7"/>
-                <constraint firstItem="fem-kw-cFu" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="4o8-2e-2KT"/>
+                <constraint firstItem="fem-kw-cFu" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="10" id="4o8-2e-2KT"/>
                 <constraint firstAttribute="trailing" secondItem="fnr-dl-k6x" secondAttribute="trailing" constant="60" id="TNK-TR-9NS"/>
                 <constraint firstItem="fnr-dl-k6x" firstAttribute="top" secondItem="fem-kw-cFu" secondAttribute="bottom" constant="40" id="cHz-6y-hw1"/>
                 <constraint firstItem="fem-kw-cFu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="dQi-nx-2aE"/>
                 <constraint firstItem="fnr-dl-k6x" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="60" id="j3e-z3-Z3A"/>
             </constraints>
-            <point key="canvasLocation" x="562" y="-571"/>
+            <point key="canvasLocation" x="437" y="-616"/>
         </view>
     </objects>
 </document>
