--- a/HealthySettle/HealthySettle/LaunchScreen.storyboard
+++ b/HealthySettle/HealthySettle/LaunchScreen.storyboard
@@ -22,16 +22,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Loading.png" translatesAutoresizingMaskIntoConstraints="NO" id="D2H-Cf-XPT">
-                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Loading1.png" translatesAutoresizingMaskIntoConstraints="NO" id="D2H-Cf-XPT">
+                                <rect key="frame" x="0.0" y="4" width="375" height="679"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="D2H-Cf-XPT" secondAttribute="trailing" id="E4a-hO-Raf"/>
-                            <constraint firstItem="D2H-Cf-XPT" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="aAk-s5-DYu"/>
-                            <constraint firstItem="D2H-Cf-XPT" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="ctp-c9-ePd"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="D2H-Cf-XPT" secondAttribute="bottom" id="nRo-0H-aYM"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="D2H-Cf-XPT" secondAttribute="trailing" constant="-16" id="E4a-hO-Raf"/>
+                            <constraint firstItem="D2H-Cf-XPT" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="-16" id="aAk-s5-DYu"/>
+                            <constraint firstItem="D2H-Cf-XPT" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-16" id="ctp-c9-ePd"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="D2H-Cf-XPT" secondAttribute="bottom" constant="-16" id="nRo-0H-aYM"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -41,6 +41,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Loading.png" width="375" height="667"/>
+        <image name="Loading1.png" width="1242" height="2208"/>
     </resources>
 </document>
