订单提交成功

--- a/HealthySettle/HealthySettle/LaunchScreen.storyboard
+++ b/HealthySettle/HealthySettle/LaunchScreen.storyboard
@@ -37,7 +37,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="87" y="206"/>
+            <point key="canvasLocation" x="85.599999999999994" y="205.54722638680661"/>
         </scene>
     </scenes>
     <resources>
