--- a/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/SearchVController.xib
+++ b/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/SearchVController.xib
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,15 +37,17 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NDZ-zT-Cdx">
+                    <rect key="frame" x="0.0" y="174" width="375" height="65"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="search_1_" translatesAutoresizingMaskIntoConstraints="NO" id="ycP-qg-wad">
-                            <frame key="frameInset" minX="25" minY="24" width="15" height="15"/>
+                            <rect key="frame" x="25" y="24" width="15" height="15"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="15" id="hi3-8l-aDF"/>
                                 <constraint firstAttribute="width" secondItem="ycP-qg-wad" secondAttribute="height" multiplier="1:1" id="liO-Ir-tXz"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EHD-rK-DrS">
+                            <rect key="frame" x="70" y="10" width="150" height="45"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="150" id="Kph-5m-mX3"/>
                             </constraints>
@@ -68,8 +73,10 @@
                     </variation>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KbJ-D2-TOF">
+                    <rect key="frame" x="0.0" y="311" width="375" height="40"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pXz-y5-lC9">
+                            <rect key="frame" x="25" y="12" width="16" height="16"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="18" id="1XN-g2-3nQ"/>
                                 <constraint firstAttribute="width" secondItem="pXz-y5-lC9" secondAttribute="height" multiplier="1:1" id="YIw-7L-puF"/>
@@ -81,8 +88,9 @@
                             </variation>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GsZ-cF-RGV">
+                            <rect key="frame" x="71" y="5" width="150" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="100" id="leV-jW-WCm"/>
+                                <constraint firstAttribute="width" constant="150" id="leV-jW-WCm"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -107,8 +115,10 @@
                     </variation>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EKD-sd-Mgv">
+                    <rect key="frame" x="0.0" y="352" width="375" height="40"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xnb-Yp-xdC">
+                            <rect key="frame" x="25" y="12" width="16" height="16"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="18" id="0qm-FH-Rhm"/>
                                 <constraint firstAttribute="width" secondItem="Xnb-Yp-xdC" secondAttribute="height" multiplier="1:1" id="O8H-EJ-WuZ"/>
@@ -129,6 +139,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d1n-8H-bAR">
+                    <rect key="frame" x="40" y="441" width="295" height="40"/>
                     <color key="backgroundColor" red="0.90196078431372551" green="0.043137254901960784" blue="0.094117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="LLQ-jF-zSV"/>
@@ -139,8 +150,10 @@
                     </state>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Rl-dL-oeu">
+                    <rect key="frame" x="0.0" y="240" width="375" height="70"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GRe-7l-qr7">
+                            <rect key="frame" x="71" y="2" width="150" height="0.0"/>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="23" id="CdM-0P-I7g"/>
@@ -156,6 +169,7 @@
                             </variation>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ytd-sp-7hj">
+                            <rect key="frame" x="71" y="68" width="150" height="0.0"/>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="23" id="8QP-VJ-xUr"/>
@@ -171,6 +185,7 @@
                             </variation>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="search_2_" translatesAutoresizingMaskIntoConstraints="NO" id="0J2-W3-2is">
+                            <rect key="frame" x="25" y="27" width="16" height="16"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="18" id="ESz-fz-ekG"/>
                                 <constraint firstAttribute="width" secondItem="0J2-W3-2is" secondAttribute="height" multiplier="1:1" id="bBu-C1-rGk"/>
@@ -203,6 +218,7 @@
                     </variation>
                 </view>
                 <imageView userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XKC-8s-Fzt">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="164"/>
                     <color key="backgroundColor" red="0.90196078430000004" green="0.043137254899999998" blue="0.094117647060000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="128" id="ehV-Yz-8pt"/>
@@ -215,12 +231,14 @@
                     </variation>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n5X-ZJ-82i">
+                    <rect key="frame" x="0.0" y="667" width="375" height="49"/>
                     <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="49" id="NX5-AB-2Ot"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jUm-LD-r6l">
+                    <rect key="frame" x="122.5" y="20" width="130" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="130" id="1fC-Ni-piw"/>
                         <constraint firstAttribute="height" constant="40" id="WCe-Wc-4cq"/>
