--- a/HealthySettle/HealthySettle/LaunchScreen.storyboard
+++ b/HealthySettle/HealthySettle/LaunchScreen.storyboard
@@ -22,7 +22,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Loadings.png" translatesAutoresizingMaskIntoConstraints="NO" id="D2H-Cf-XPT">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Loads.png" translatesAutoresizingMaskIntoConstraints="NO" id="D2H-Cf-XPT">
                                 <rect key="frame" x="0.0" y="4" width="375" height="679"/>
                             </imageView>
                         </subviews>
@@ -41,6 +41,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Loadings.png" width="750" height="1334"/>
+        <image name="Loads.png" width="750" height="1334"/>
     </resources>
 </document>
